# XOR-Editor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SetUp.md  main.py  pyproject.toml
src/: __init__.py
src/components/: texteditor.py
wiki/: docs.md
